fix: removed display: none as that breaks the animations

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -23,12 +23,12 @@
     opacity: 0;
     position: absolute;
     object-fit: cover;
-    display: none;
+    transition: all 500ms ease-in-out;
+    transform: scale(1.1);
 
     &.active {
+      transform: scale(1);
       opacity: 1;
-      position: relative;
-      display: inherit;
 
       &.l-col-to-row {
         @extend .l-col-to-row;
